--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,5 @@
+RewriteEngine On
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301,NE] 
+
 DirectoryIndex index.php
